--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -170,7 +170,7 @@ ndata3 <- clean_data %>%
 hist(ndata3$sum_steps,
      xlab = "Sum of steps per day",
      ylab = "Frequency",
-     main = "Total number of steps taken per day",
+     main = "Total number of steps taken per day (with missing data imputed)",
      col = "blue",
      ylim = c(0, 30),
      labels = TRUE)
